<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.sch.smktelkom_mlg.tugas01.xirpl338.hitungsuhu.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/awal"
                    android:layout_width="154dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:entries="@array/suhu" />

                <EditText
                    android:id="@+id/SuhuAwal"
                    android:layout_width="278dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:defaultFocusHighlightEnabled="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:singleLine="false"
                    android:textAlignment="textEnd"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_alignParentBottom="false"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/akhir"
                    android:layout_width="154dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:entries="@array/suhu" />

                <EditText
                    android:id="@+id/SuhuAkhir"
                    android:layout_width="278dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:defaultFocusHighlightEnabled="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:textAlignment="textEnd"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/angka1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="1"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/angka2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="2"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/angka3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="3"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/angka4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="4"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/angka5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/angka6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="6"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/angka7"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="7"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/angka8"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="8"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/angka9"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="9"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/clear"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="C"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/angka0"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <ImageButton
                    android:id="@+id/delete"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:onClick="Klik"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:scaleType="fitCenter"
                    android:src="?android:attr/homeAsUpIndicator"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:tint="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>